give ALL dialogs padding to fix all kinds of overflow issues

--- a/packages/frontend/src/styles.scss
+++ b/packages/frontend/src/styles.scss
@@ -384,6 +384,7 @@ pre {
   overflow-x: scroll
 }
 
-.mat-mdc-dialog-inner-container > .mat-mdc-dialog-surface:has(app-new-editor) {
+/* .mat-mdc-dialog-inner-container > .mat-mdc-dialog-surface:has(app-new-editor) { */
+.mat-mdc-dialog-inner-container > .mat-mdc-dialog-surface {
     padding: 20px;
 }
